# rl-3d-truck-packinggg

./: .gitignore  README.md  pyproject.toml
configs/: curriculum.yaml  env.yaml  train_ppo.yaml
renderer/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
renderer/public/traces/: sample.json
renderer/src/: App.tsx
renderer/src/animation/: timeline.ts
renderer/src/camera/: CinematicRig.tsx
renderer/src/hud/: MetricsOverlay.tsx
renderer/src/scene/: Boxes.tsx  Forklift.tsx  Lighting.tsx  Truck.tsx  Warehouse.tsx  constants.ts
renderer/src/trace/: loader.ts  schema.ts
scripts/: bench_mask.py  capture_frames.ps1  generate_demo.ps1  make_sample_trace.py  process_logo.py  setup.ps1  train.ps1  verify_onnx.py
src/agent/: eval.py  export_onnx.py  policy.py  train.py
src/analytics/: metrics.py
src/trace/: recorder.py  schema.py
