[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truck-simulator"
version = "0.1.0"
description = "RL-powered smart truck loading simulation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
    "torch>=2.2",
    "pyyaml>=6.0",
    "tensorboard>=2.16",
    "tqdm>=4.66",
    "rich>=13.7",
    "onnx>=1.16",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
